--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,55 @@
 <classpath>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java [1.8.202.08]"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="lib/batik-anim-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-awt-util-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-bridge-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-codec-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-constants-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-css-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-dom-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-ext-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-gvt-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-i18n-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-parser-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-script-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-shared-resources-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-svg-dom-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-svggen-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-svgrasterizer-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-transcoder-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-util-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/batik-xml-1.14.jar"/>
+	<classpathentry kind="lib" path="lib/bcpkix-jdk15on-1.70.jar"/>
+	<classpathentry kind="lib" path="lib/bcprov-jdk15on-1.70.jar"/>
+	<classpathentry kind="lib" path="lib/bcutil-jdk15on-1.70.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.15.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections4-4.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-compress-1.21.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/curvesapi-1.07.jar"/>
+	<classpathentry kind="lib" path="lib/fontbox-2.0.26.jar"/>
+	<classpathentry kind="lib" path="lib/graphics2d-0.40.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.activation-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jakarta.xml.bind-api-3.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-api-2.18.0.jar"/>
+	<classpathentry kind="lib" path="lib/pdfbox-2.0.26.jar"/>
+	<classpathentry kind="lib" path="lib/poi-5.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/poi-examples-5.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/poi-excelant-5.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/poi-javadoc-5.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-5.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-full-5.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-lite-5.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/poi-scratchpad-5.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.36.jar"/>
+	<classpathentry kind="lib" path="lib/SparseBitSet-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="lib/xml-apis-ext-1.3.04.jar"/>
+	<classpathentry kind="lib" path="lib/xmlbeans-5.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/xmlgraphics-commons-2.6.jar"/>
+	<classpathentry kind="lib" path="lib/xmlsec-3.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
